handle elections